--- a/HTML forms--this folder should be moved/Oncology Visit form.html
+++ b/HTML forms--this folder should be moved/Oncology Visit form.html
@@ -282,7 +282,7 @@
                     <td>Nom / Last name: <lookup class="value"
                                                  expression="patient.personName.familyName" />
                     </td>
-                    <td>Prénom/ First name: <lookup class="value"
+                    <td>Prï¿½nom/ First name: <lookup class="value"
                                                     expression="patient.personName.givenName" />
                     </td>
                 </tr>
@@ -338,8 +338,8 @@
                 <td><obs conceptId="3ce93cf2-26fe-102b-80cb-0017a47871b2" />cm</td>
                 <td>
                         <obs conceptId="$@SYSTOLIC_BLOOD_PRESSURE@"/>/
-                        <obs conceptId="$@DIASTOLIC_BLOOD_PRESSURE@"/> 
-                    
+                        <obs conceptId="$@DIASTOLIC_BLOOD_PRESSURE@"/>
+
                 </td>
 
                 <td>
@@ -490,8 +490,8 @@
                             <obs conceptId="$@PATIENT_PLAN_COMMENTS@" cols="150"/>
 
                             <br/>
-                            <span >Complete ‘Exit Program’ form if patient is exiting from oncology program</span>
-                        <br /><br /><span> **Complete another ‘DST’ form if there’s change in disease stage or tx intent</span>
+                            <span >Complete ï¿½Exit Programï¿½ form if patient is exiting from oncology program</span>
+                        <br /><br /><span> **Complete another ï¿½DSTï¿½ form if thereï¿½s change in disease stage or tx intent</span>
                         <br /><br /><b>Clinician:</b><encounterProvider role="Oncology Provider" default="currentUser"/>
                         </td>
                     </tr>
