--- a/HTML forms--this folder should be moved/Oncology Breast Ultrasound.html
+++ b/HTML forms--this folder should be moved/Oncology Breast Ultrasound.html
@@ -103,7 +103,7 @@
 
     <style>
         th.tableHeader {
-        background-color: #3333cc;
+        background-color: #009d8e;
         color: #FFFFFF;
         font-size: 16px;
         text-align: left;
@@ -132,65 +132,56 @@
 
         @media print {
         #container {
-        display: none;
-        }
-
-        #printArea {
         display: block;
         }
-
+        #printArea {
+        display: none;
+        }
         #userBar {
         display: none;
         }
-
         #banner {
         display: none;
         }
-
         #footer {
         display: none;
         }
-
         #htmlFormEntryBanner {
         display: none;
         }
-
         .error {
         display: none;
         }
-
         .lables {
         width: 200px;
         }
-
         table {
         width: 100%;
         }
-
         table,td,th {
         border: 1px solid black;
         border-collapse: collapse;
         }
-
         th {
         text-align: left;
-        background-color: #3333cc;
+        background-color: #D9D9D9;
         font-size: 10px;
         }
-
         td {
         font-size: 10px;
         }
-
+        .value {
+        font-size: 20px;
+        font-weight: bold;
+        font-style: italic;
+        }
         .selectedCancerStagingKeys {
         page-break-before: always;
         border: 0px;
         }
-
         table.selectedCancerStagingKeys td {
         border: 0px;
         }
-
         #signature {
         border: none;
         }
@@ -205,11 +196,9 @@
         width: 100%;
         border-color: #009d8e;
         }
-
         #container {
         display: block;
         }
-
         #printArea {
         display: none;
         }
@@ -241,7 +230,7 @@
                     <td>Nom / Last name: <lookup class="value"
                                                  expression="patient.personName.familyName" />
                     </td>
-                    <td>Prénom/ First name: <lookup class="value"
+                    <td>PrÃ©nom/ First name: <lookup class="value"
                                                     expression="patient.personName.givenName" />
                     </td>
                 </tr>
@@ -436,33 +425,33 @@
                              answerLabel="Negative ultrasound-normal breast or axilla" style="checkbox"/>
                         <br/>
                         <obs  id="AssessmentCheckboxRadio" conceptId="$@assessment(coded)@" answerConceptId="$@Breast_mass@"
-                             answerLabel="Breast mass (choose one)" style="checkbox"/>
-                            <br/>
-                            &#160; &#160;  &#160;  &#160;  &#160; &#160;&#160;
-                            <obs conceptId="$@Breast_mass@" answerConceptId="$@Normal_intramammary_lymph_node@"
-                                 answerLabel="Normal intramammary lymph node" style="checkbox"/>
-                            <br/>
-                            &#160; &#160;  &#160;  &#160;  &#160; &#160;&#160;
-                            <obs conceptId="$@Breast_mass@" answerConceptId="$@Simple_cyst@"
-                                 answerLabel="Simple cyst" style="checkbox"/>
-                            <br/>
-                            &#160; &#160;  &#160;  &#160;  &#160; &#160;&#160;
-                            <obs conceptId="$@Breast_mass@" answerConceptId="$@Probable_cyst@"
-                                 answerLabel="Probable cyst" style="checkbox"/>
-                            <br/>
-                            &#160; &#160;  &#160;  &#160;  &#160; &#160;&#160;
-                            <obs conceptId="$@Breast_mass@" answerConceptId="$@Complex_cystic/solid_mass@"
-                                 answerLabel="Complex cystic/solid mass." style="checkbox"/>
-                            If yes, possible abscess?
-                            <obs conceptId="$@ABSCESS@" answerConceptIds="$@YES@,$@NO@"
-                                 answerLabels="Yes,No" style="radio"/>
-                            <br/>
-                            &#160; &#160;  &#160;  &#160;  &#160; &#160;&#160;
-                            <obs conceptId="$@Breast_mass@" answerConceptId="$@Solid_mass@"
-                                 answerLabel="Solid mass" style="checkbox"/>
+                              answerLabel="Breast mass (choose one)" style="checkbox"/>
+                        <br/>
+                        &#160; &#160;  &#160;  &#160;  &#160; &#160;&#160;
+                        <obs conceptId="$@Breast_mass@" answerConceptId="$@Normal_intramammary_lymph_node@"
+                             answerLabel="Normal intramammary lymph node" style="checkbox"/>
+                        <br/>
+                        &#160; &#160;  &#160;  &#160;  &#160; &#160;&#160;
+                        <obs conceptId="$@Breast_mass@" answerConceptId="$@Simple_cyst@"
+                             answerLabel="Simple cyst" style="checkbox"/>
+                        <br/>
+                        &#160; &#160;  &#160;  &#160;  &#160; &#160;&#160;
+                        <obs conceptId="$@Breast_mass@" answerConceptId="$@Probable_cyst@"
+                             answerLabel="Probable cyst" style="checkbox"/>
+                        <br/>
+                        &#160; &#160;  &#160;  &#160;  &#160; &#160;&#160;
+                        <obs conceptId="$@Breast_mass@" answerConceptId="$@Complex_cystic/solid_mass@"
+                             answerLabel="Complex cystic/solid mass." style="checkbox"/>
+                        If yes, possible abscess?
+                        <obs conceptId="$@ABSCESS@" answerConceptIds="$@YES@,$@NO@"
+                             answerLabels="Yes,No" style="radio"/>
+                        <br/>
+                        &#160; &#160;  &#160;  &#160;  &#160; &#160;&#160;
+                        <obs conceptId="$@Breast_mass@" answerConceptId="$@Solid_mass@"
+                             answerLabel="Solid mass" style="checkbox"/>
 
-                            <obs conceptId="$@Solid_mass@" answerConceptIds="$@low@,$@Intermediate@,$@High@"
-                                 answerLabels="low,intermediate,high  suspicion for malignancy" style="radio"/>
+                        <obs conceptId="$@Solid_mass@" answerConceptIds="$@low@,$@Intermediate@,$@High@"
+                             answerLabels="low,intermediate,high  suspicion for malignancy" style="radio"/>
 
                         <br/>
                         <obs id="AssessmentCheckboxRadio" conceptId="$@assessment(coded)@" answerConceptId="$@Axillary_mass@"
@@ -521,7 +510,7 @@
                              answerLabel="Patient discharged" style="checkbox"/>
                         <br/>
                         Follow-up breast exam on
-                        <obs conceptId="$@Date_of_breast_Follow-up_exam@"/>
+                        <obs conceptId="$@Date_of_breast_Follow-up_exam@" allowFutureDates="true"/>
                         (Note: If patient notes change in breast exam she should return to clinic sooner)
                     </td>
                 </tr>
@@ -532,7 +521,7 @@
                 </tr>
                 <tr>
                     <td colspan="3">
-                        Date of report: <obs conceptId="$@Date_of_pathology_report@"/>
+                        Date of report: <obs conceptId="$@Date_of_pathology_report@" allowFutureDates="true"/>
                         <br/>
                         <obs conceptId="$@Pathologic_diagnosis@" answerConceptId="$@Fibroadenoma@"
                              answerLabel="Fibroadenoma" style="checkbox"/>
@@ -556,7 +545,7 @@
             </table>
         </section>
         <br />
-       
+
         <submit />
         <br/>
         <encounterVoided/>
