--- a/HTML forms--this folder should be moved/Oncology Callback Form.html
+++ b/HTML forms--this folder should be moved/Oncology Callback Form.html
@@ -85,65 +85,56 @@
 
         @media print {
         #container {
-        display: none;
-        }
-
-        #printArea {
         display: block;
         }
-
+        #printArea {
+        display: none;
+        }
         #userBar {
         display: none;
         }
-
         #banner {
         display: none;
         }
-
         #footer {
         display: none;
         }
-
         #htmlFormEntryBanner {
         display: none;
         }
-
         .error {
         display: none;
         }
-
         .lables {
         width: 200px;
         }
-
         table {
         width: 100%;
         }
-
         table,td,th {
         border: 1px solid black;
         border-collapse: collapse;
         }
-
         th {
         text-align: left;
-        background-color: #3333cc;
+        background-color: #D9D9D9;
         font-size: 10px;
         }
-
         td {
         font-size: 10px;
         }
-
+        .value {
+        font-size: 20px;
+        font-weight: bold;
+        font-style: italic;
+        }
         .selectedCancerStagingKeys {
         page-break-before: always;
         border: 0px;
         }
-
         table.selectedCancerStagingKeys td {
         border: 0px;
         }
-
         #signature {
         border: none;
         }
@@ -158,11 +149,9 @@
         width: 100%;
         border-color: #009d8e;
         }
-
         #container {
         display: block;
         }
-
         #printArea {
         display: none;
         }
@@ -185,7 +174,7 @@
                     <td>Nom / Last name: <lookup class="value"
                                                  expression="patient.personName.familyName" />
                     </td>
-                    <td>Prénom/ First name: <lookup class="value"
+                    <td>PrÃ©nom/ First name: <lookup class="value"
                                                     expression="patient.personName.givenName" />
                     </td>
                 </tr>
@@ -206,18 +195,18 @@
                             id="encounterLocation" default="Butaro Hospital" />
                     </td>
                     <td>Provider:<encounterProvider id="encounterProvider"
-                                                    role="Oncology Provider" default="currentUser" />
+                                                    role="Oncology Provider"  />
                     </td>
                 </tr>
             </table>
             <br />
 
             <table border="1">
-               <tr>
+                <tr>
 
-                   <th class="tableHeader">Action Taken</th>
-                   <th class="tableHeader" colspan="3">If Patient Missed Visit, Reason</th>
-               </tr>
+                    <th class="tableHeader">Action Taken</th>
+                    <th class="tableHeader" colspan="3">If Patient Missed Visit, Reason</th>
+                </tr>
                 <tr>
 
                     <td rowspan="3">
