Edited provider by adding the default user

--- a/HTML forms--this folder should be moved/Oncology - GTN DST.html
+++ b/HTML forms--this folder should be moved/Oncology - GTN DST.html
@@ -790,7 +790,7 @@
                             id="encounterLocation" default="Butaro Hospital" />
                     </td>
                     <td>Provider:<encounterProvider id="encounterProvider"
-                                                    role="Oncology Provider"  />
+                                                    role="Oncology Provider"  default="currentUser"/>
                     </td>
                 </tr>
             </table>
