--- a/HTML forms--this folder should be moved/Oncology - Cervical Cancer DST.html
+++ b/HTML forms--this folder should be moved/Oncology - Cervical Cancer DST.html
@@ -798,7 +798,7 @@
                             id="encounterLocation" default="Butaro Hospital" />
                     </td>
                     <td>Provider:<encounterProvider id="encounterProvider"
-                                                    role="Oncology Provider"  />
+                                                    role="Oncology Provider"  default="currentUser"/>
                     </td>
                 </tr>
             </table>
