--- a/HTML forms--this folder should be moved/Oncology - Chronic Lymphocytic Leukemia or Small Lymphocytic Lymphoma DST.html
+++ b/HTML forms--this folder should be moved/Oncology - Chronic Lymphocytic Leukemia or Small Lymphocytic Lymphoma DST.html
@@ -784,7 +784,7 @@
                             id="encounterLocation" default="Butaro Hospital" />
                     </td>
                     <td>Provider:<encounterProvider id="encounterProvider"
-                                                    role="Oncology Provider"  />
+                                                    role="Oncology Provider" default="currentUser" />
                     </td>
                 </tr>
             </table>
